# sichuanhua

./: Dockerfile  Dockerfile.development  README.md  ambiguous_pr_chars.txt  char_freq.csv  docker-compose.yml  entrypoint.sh  fangyan.json  fangyan.tsv  fangyan.txt  fangyan_raw.json  fullIndexWithSpaces.json  fullIndexWithSpacesDelete1.json  fullIndexWithoutSpaces.json  fullIndexWithoutSpacesDelete1.json  main  pr_chars.py  pyproject.toml  shupin.dict.yaml  shupin.simp.dict.yaml  t2s.py  tidy.py  tonelessIndexWithSpaces.json  tonelessIndexWithSpacesDelete1.json  tonelessIndexWithoutSpaces.json  tonelessIndexWithoutSpacesDelete1.json  unique_pr_chars.txt
.cloudbase/container/: debug.json
sichuanhua/: dict.cpp  dict.hpp  main.cpp  server.cpp  server.hpp
sichuanhua.xcodeproj/: project.pbxproj
sichuanhua.xcodeproj/xcshareddata/xcschemes/: build sound index.xcscheme  serve.xcscheme  sichuanhua.xcscheme
sichuanhua.xcodeproj/xcuserdata/kevin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
sichuanhua.xcodeproj/xcuserdata/kevin.xcuserdatad/xcschemes/: xcschememanagement.plist
sounds/M4A/: 0.m4a  1.m4a  10.m4a  100.m4a  1000.m4a  1001.m4a  1002.m4a  1003.m4a  1004.m4a  1005.m4a  1006.m4a  1007.m4a  1008.m4a  1009.m4a  101.m4a  1010.m4a  1011.m4a  1012.m4a  1013.m4a  1014.m4a  1015.m4a  1016.m4a  1017.m4a  1018.m4a  1019.m4a  102.m4a  1020.m4a  1021.m4a  1022.m4a  1023.m4a  1024.m4a  1025.m4a  1026.m4a  1027.m4a  1028.m4a  1029.m4a  103.m4a  1030.m4a  1031.m4a  1032.m4a  (+1531 more)
